# mini-rsllm

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: macos-metal.yml
bench/: bench_cpu.sh  bench_metal.sh
docs/: 00-introduction.md  01-gguf-format.md  02-tokenizer.md  03-tensor-and-quantization.md  04-transformer-basics.md  05-llama-model.md  06-sampling-strategies.md  07-backend-abstraction.md  08-inference-pipeline.md  09-hands-on-projects.md  README.md  appendix-glossary.md
scripts/: soak_metal.sh
src/: backend.rs  gguf.rs  lib.rs  main.rs  model.rs  sampler.rs  tensor.rs  tokenizer.rs
src/metal/: buffer.rs  context.rs  mod.rs  weights.rs
src/metal/ffi/: metal_bridge.m
src/metal/kernels/: matvec.metal
tests/: llama_cpp_comparison_report.md  metal_parity.rs
